# chinatax-crawler

./: .gitignore  LICENSE  README.md  README_EN.md  build_checkpoint.py  check_data.py  continue_crawl.py  dedup_and_verify.py  fetch_index_batch.py  fix_final.py  pyproject.toml  run_batch.py  step1_index.py  step2_articles.py  sync_json.py  test_connect.py
chinatax_crawler/: __init__.py  __main__.py  config.py  crawler.py  parser.py  storage.py  utils.py
data/: chinatax_cases.csv  chinatax_cases_index.json
tests/: test_core.py
