[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chinatax-crawler"
version = "0.1.0"
description = "国家税务总局税案通报爬虫 - 爬取并结构化存储税务案例数据"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Data Collector", email = "user@example.com"}
]
keywords = ["china-tax", "crawler", "tax-cases", "web-scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "tqdm>=4.64",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
chinatax-crawl = "chinatax_crawler.__main__:main"

[project.urls]
Homepage = "https://github.com/user/chinatax-crawler"
Repository = "https://github.com/user/chinatax-crawler"

[tool.setuptools.packages.find]
where = ["."]
include = ["chinatax_crawler*"]
